# Meteor-project-_2

./: CMakeLists.txt  README.md  REs.qrc  logic.cpp  logic.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qsplashscreen.cpp  qsplashscreen.h  read.cpp  sources.qrc
